(lang dune 3.16)

(name pokerbank)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "mizlan")

(maintainers "mizlan")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name pokerbank)
 (synopsis "A ledger for poker games")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ()))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
