(lang dune 3.16)

(name pokerbank_backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "mizlan")

(maintainers "mizlan")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name pokerbank_backend)
 (synopsis "A ledger for poker games")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ()))
